--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "my-vue-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "element-plus": "^2.7.8",
-    "lodash-es": "^4.17.21",
-    "normalize.css": "^8.0.1",
-    "nprogress": "^0.2.0",
-    "pinia": "^2.2.0",
-    "pinia-plugin-persistedstate": "^3.2.1",
-    "vite-svg-loader": "^5.1.0",
-    "vue": "^3.4.31",
-    "vue-fragment-oxr": "^2.6.6",
-    "vue-router": "^4.4.0",
-    "vue-types": "^5.1.3"
-  },
-  "devDependencies": {
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.14.12",
-    "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vitejs/plugin-vue-jsx": "^4.0.0",
-    "sass": "^1.77.8",
-    "ts-xor": "^1.3.0",
-    "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.18.2",
-    "unplugin-vue-components": "^0.27.3",
-    "vite": "^5.3.4",
-    "vite-plugin-style-import": "^2.0.0",
-    "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vue-tsc": "^2.0.24"
-  }
+	"name": "my-vue-app",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc -b && vite build",
+		"staging": "vue-tsc -b && vite build --mode staging",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@element-plus/icons-vue": "^2.3.1",
+		"element-plus": "^2.7.8",
+		"lodash-es": "^4.17.21",
+		"normalize.css": "^8.0.1",
+		"nprogress": "^0.2.0",
+		"pinia": "^2.2.0",
+		"pinia-plugin-persistedstate": "^3.2.1",
+		"vite-svg-loader": "^5.1.0",
+		"vue": "^3.4.31",
+		"vue-bilibili-embed-renderer-oxr": "file:vue-bilibili-embed-renderer-oxr-1.2.3.tgz",
+		"vue-fragment-oxr": "^2.6.6",
+		"vue-router": "^4.4.0",
+		"vue-types": "^5.1.3"
+	},
+	"devDependencies": {
+		"@types/lodash-es": "^4.17.12",
+		"@types/node": "^20.14.12",
+		"@types/nprogress": "^0.2.3",
+		"@vitejs/plugin-vue": "^5.0.5",
+		"@vitejs/plugin-vue-jsx": "^4.0.0",
+		"sass": "^1.77.8",
+		"ts-xor": "^1.3.0",
+		"typescript": "^5.2.2",
+		"unplugin-auto-import": "^0.18.2",
+		"unplugin-vue-components": "^0.27.3",
+		"vite": "^5.3.4",
+		"vite-plugin-style-import": "^2.0.0",
+		"vite-plugin-svg-icons": "^2.0.1",
+		"vite-plugin-vue-setup-extend": "^0.4.0",
+		"vue-tsc": "^2.0.24"
+	}
 }
