--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
 		"pinia-plugin-persistedstate": "^3.2.1",
 		"vite-svg-loader": "^5.1.0",
 		"vue": "^3.4.31",
-		"vue-bilibili-embed-renderer-oxr": "file:vue-bilibili-embed-renderer-oxr-1.2.3.tgz",
+		"vue-bilibili-embed-renderer-oxr": "^1.2.3",
 		"vue-fragment-oxr": "^2.6.6",
 		"vue-router": "^4.4.0",
 		"vue-types": "^5.1.3"
 	},
 	"devDependencies": {
+		"@types/chrome": "^0.0.269",
 		"@types/lodash-es": "^4.17.12",
 		"@types/node": "^20.14.12",
 		"@types/nprogress": "^0.2.3",
