--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["Vue.volar"]
+	"recommendations": ["kamikillerto.vscode-colorize", "oderwat.indent-rainbow", "MisterJ.vue-volar-extention-pack"]
 }
