--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.3.1",
+		"@vueuse/core": "^10.11.0",
+		"@vueuse/integrations": "^10.11.0",
 		"element-plus": "^2.7.8",
 		"lodash-es": "^4.17.21",
 		"normalize.css": "^8.0.1",
