--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,7 +11,7 @@
 		"baseUrl": ".",
 		"paths": { "@/*": ["src/*"] },
 		"typeRoots": ["./types"],
-		"types": ["vite/client"],
+		"types": ["vite/client", "vidstack/vue"],
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
