--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "vue-tsc -b && vite build",
 		"staging": "vue-tsc -b && vite build --mode staging",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"gener": "ts-node ./src/assets/mat"
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.3.1",
