--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"ts-xor": "^1.3.0",
 		"typescript": "^5.6.2",
 		"unplugin-auto-import": "^0.18.3",
+		"unplugin-fonts": "^1.1.1",
 		"unplugin-vue-components": "^0.27.4",
 		"vite": "^5.4.5",
 		"vite-plugin-style-import": "^2.0.0",
